--- a/src/assets/css/1-player-tic-tac-toe.css
+++ b/src/assets/css/1-player-tic-tac-toe.css
@@ -3,7 +3,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-     font-family: Poppins;
+  font-family: Poppins;
 }
 body {
   text-align: center;
@@ -14,145 +14,45 @@ body {
   letter-spacing: 0.03em;
 }
 .main-content {
-     min-height: 100vh;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     background-color: #FFFFFF;
+   display: flex;
+   margin: 20px 0 20px 0;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
-.block {
-     display: flex;
-     width: 100px;
-     height: 100px;
-     align-items: center;
-     justify-content: center;
-     font-size: 3rem;
-     font-weight: bold;
-     margin: 0 2px 2px 0;
-     border: 3px solid black;
-     border-radius: 9px;
-     transition: background 0.2s ease-in-out;
+h1 {
+  margin: 20px 0 20px 0;
 }
-.block:hover {
-     cursor: pointer;
-     background: #94A2FB;
-}
-.occupied:hover {
-     background: #FF3A3A;
-}
-#block_0,
-#block_1,
-#block_2 {
-  border-top: none;
-}
-
-#block_0,
-#block_3,
-#block_6 {
-  border-left: none;
-}
-
-#block_6,
-#block_7,
-#block_8 {
-  border-bottom: none;
-}
-
-#block_2,
-#block_5,
-#block_8 {
-  border-right: none;
-}
-
-.playerWin {
-     color: green;
-   }
-   
-   .computerWin {
-     color: red;
-   }
-   
-   .draw {
-     color: orangered;
-   }
-button {
-     outline: none;
-     border: 4px solid darkslateblue;
-     border-radius: 12px;
-     padding: 5px 10px;
-     font-size: 1.5rem;
-     font-weight: bold;
-     background: none;
-     margin-top: 20px;
-     transition: all 0.2s ease-in-out;
-}
-button:hover {
-     cursor: pointer;
-     background: #94A2FB;
-     color: white;
-}
-.game-title {
-  margin: 20px 0 10px 0;
-  font-family: Poppins;
-  color: rgba(0, 0, 0, 1);
-  letter-spacing: 0.03em;
-  font-weight: 600;
-  font-style: normal;
-}
-.game-area {
-     display: grid;
-     width: 300px;
-     height: 300px;
-     grid-template-columns: auto auto auto;
-}
-
-h2 {
-  font-family: Poppins;
-  font-weight: 200;
-  font-style: normal;
+#ttt-game {
+  display: grid;
+  max-width: 600px;
   margin: 0 auto;
-  font-size: 35px;
-  margin: 10px 0 20px 0;
+  grid-template-columns: 33% 33% 33%;
+  grid-gap: 5px;
 }
-.flex-container {
+#ttt-game div {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.flex-column {
-  height: 100%;
-  width: 100%;
-  flex-direction: column;
-}
-.flex-wrap {
-  flex-wrap: wrap;
-  height: 432px;
-  width: 432px;
-}
-.square {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 3em;
-  font-family: Montserrat Alternates;
-  font-weight: 600;
-  color: #94A2FB;
-  border: 3px outset rgba(0, 0, 0, 0.75);
+  border: 3px solid black;
   border-radius: 15px;
-  height: 140px;
-  width: 140px;
-  margin: 0 1px 0 1px;
-}
-#reset-button {
-  background-color: #94A2FB;
-  border-radius: 19px;
+  font-size: 3em;
   text-align: center;
-  font-size: 28px;
-  border: 3px outset darkslateblue;
-  margin: 25px 0 0 0;
-  padding: 10px 20px;
+  background-color: gainsboro;
+  padding: 50px;
 }
+#ttt-game div:hover {
+  background-color: lightblue;
+}
+#ttt-game div.player {
+  background-color: lightgreen;
+  color: white;
+}
+#ttt-game div.computer {
+  background-color: lightcoral;
+  color: white;
+}
+
 /* Set the header logo image and text */
 .logo-image {
   width: 55px;
